rabbitmq/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-ingress
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: demo
    ports:
    - protocol: TCP
      port: 5672
    - protocol: TCP
      port: 15672
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 15672
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tailscale
    ports:
    - protocol: TCP
      port: 5672
    - protocol: TCP
      port: 15672
